<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageOperate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_compress">图片压缩</string>
    <string name="image_crop">图片剪切</string>
    <string name="before_compress">压缩前</string>
    <string name="after_compress">压缩后</string>
    <string name="before_crop">剪切前</string>
    <string name="after_crop">剪切后</string>
    <string name="compress">压缩</string>
    <string name="crop">剪切</string>
    <string name="title_activity_compress">CompressActivity</string>

</resources>
